fixed overflow issue on mobile, and rate-limiting issue

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   font-family: Montserrat;
+  overflow-x: hidden;
 }
 
 #header {
